--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AI Text Generator</title>
+    <script src="https://cdn.plyr.io/3.6.12/plyr.js" type="module"></script>
   </head>
   <body>
     <div id="app"></div>
