imported plyr css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AI Text Generator</title>
     <script src="https://cdn.plyr.io/3.6.12/plyr.js" type="module"></script>
+    <link rel="stylesheet" href="https://cdn.plyr.io/3.6.12/plyr.css" />
   </head>
   <body>
     <div id="app"></div>
